--- a/components/abstractions/gradle.properties
+++ b/components/abstractions/gradle.properties
@@ -21,7 +21,7 @@ org.gradle.jvmargs=-Xmx2g
 org.gradle.parallel=true
 org.gradle.caching=true
 
-mavenGroupId         = com.microsoft.graph
+mavenGroupId         = com.microsoft.kiota
 mavenArtifactId      = microsoft-graph-kiota-java-[NAME]
 mavenMajorVersion = 0
 mavenMinorVersion = 0
