remove graph referance proper artifact Id names

--- a/components/abstractions/gradle.properties
+++ b/components/abstractions/gradle.properties
@@ -22,10 +22,10 @@ org.gradle.parallel=true
 org.gradle.caching=true
 
 mavenGroupId         = com.microsoft.kiota
-mavenArtifactId      = microsoft-graph-kiota-java-[NAME]
+mavenArtifactId      = microsoft-kiota-abstractions
 mavenMajorVersion = 0
 mavenMinorVersion = 0
-mavenPatchVersion = [PLACEHOLDER]
+mavenPatchVersion = 1
 mavenArtifactSuffix = 
 
 #These values are used to run functional tests
