--- a/components/serialization/json/gradle.properties
+++ b/components/serialization/json/gradle.properties
@@ -21,11 +21,11 @@ org.gradle.jvmargs=-Xmx2g
 org.gradle.parallel=true
 org.gradle.caching=true
 
-mavenGroupId         = com.microsoft.graph
-mavenArtifactId      = microsoft-graph-kiota-java-[NAME]
+mavenGroupId         = com.microsoft.kiota
+mavenArtifactId      = microsoft-kiota-http-okHttp
 mavenMajorVersion = 0
 mavenMinorVersion = 0
-mavenPatchVersion = [PLACEHOLDER]
+mavenPatchVersion = 1
 mavenArtifactSuffix = 
 
 #These values are used to run functional tests
