--- a/components/http/okHttp/build.gradle
+++ b/components/http/okHttp/build.gradle
@@ -64,10 +64,10 @@ publishing {
             from components.java
             pom.withXml {
                 def root = asNode()
-                root.appendNode('name', 'Microsoft Graph Kiota-[NAME] SDK for Java')
+                root.appendNode('name', 'Microsoft Kiota okHttp Library for Java')
                 root.appendNode('url', 'https://github.com/microsoft/kiota-java')
                 root.children().last() + pomConfig
-                def pomFile = file("${project.buildDir}/libs/microsoft-graph-kiota-[NAME].pom")
+                def pomFile = file("${project.buildDir}/libs/microsoft-kiota-http-okHttp.pom")
                 writeTo(pomFile)
             }
 
@@ -136,7 +136,7 @@ def fixAscNames = { name ->
     if(name.contains('pom')) {
         "${project.property('mavenArtifactId')}-${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}.pom.asc"
     } else {
-        name.replace('msgraph-kiota-java-[NAME]', "${project.property('mavenArtifactId')}-${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}")
+        name.replace('microsoft-kiota-java-http-okHttp', "${project.property('mavenArtifactId')}-${mavenMajorVersion}.${mavenMinorVersion}.${mavenPatchVersion}")
     }
 }
 
@@ -169,16 +169,16 @@ def customizePom(pom) {
         root.children().last() + {
             resolveStrategy = Closure.DELEGATE_FIRST
 
-            description 'Microsoft Graph Kiota-[NAME]'
-            name 'Microsoft Graph Kiota-Java [NAME]'
-            url 'https://github.com/microsoftgraph/kiota-java'
+            description 'Microsoft Kiota-Http with okHttp'
+            name 'Microsoft Kiota-Java Http-okHttp'
+            url 'https://github.com/microsoft/kiota-java'
             organization {
                 name 'Microsoft'
-                url 'https://github.com/microsoftgraph/kiota-java'
+                url 'https://github.com/microsoft/kiota-java'
             }
             issueManagement {
                 system 'GitHub'
-                url 'https://github.com/microsoftgraph/kiota-java/issues'
+                url 'https://github.com/microsoft/kiota-java/issues'
             }
             licenses {
                 license {
@@ -188,9 +188,9 @@ def customizePom(pom) {
                 }
             }
             scm {
-                url 'https://github.com/microsoftgraph/kiota-java'
-            	connection 'scm:git:git://github.com/microsoftgraph/kiota-java.git'
-            	developerConnection 'scm:git:ssh://git@github.com:microsoftgraph/kiota-java.git'
+                url 'https://github.com/microsoft/kiota-java'
+            	connection 'scm:git:git://github.com/microsoft/kiota-java.git'
+            	developerConnection 'scm:git:ssh://git@github.com:microsoft/kiota-java.git'
             }
             developers {
                 developer {
