--- a/components/serialization/json/build.gradle
+++ b/components/serialization/json/build.gradle
@@ -142,8 +142,8 @@ def fixAscNames = { name ->
 
 compileJava {
   options.compilerArgs << "-parameters"
-  sourceCompatibility = 1.16
-  targetCompatibility = 1.16
+  sourceCompatibility = '17'
+  targetCompatibility = '17'
 }
 
 def getVersionCode() {
