--- a/components/serialization/json/gradle/dependencies.gradle
+++ b/components/serialization/json/gradle/dependencies.gradle
@@ -8,8 +8,6 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:31.1-jre'
     api 'com.google.code.gson:gson:2.9.0'
-    
-    //TODO
-    //This will NOT build for now, must release abstractions snapshot and update this once that is complete
-    //api 'com.microsoft.kiota:kiota-abstractions:1.0.36'
+
+    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.0.1'
 }
