--- a/components/http/okHttp/build.gradle
+++ b/components/http/okHttp/build.gradle
@@ -10,7 +10,8 @@ plugins {
 java {
     modularity.inferModulePath = true
     withSourcesJar()
-    withJavadocJar()
+    //Prevent Javadoc from causing build failure
+    //withJavadocJar()
 }
 
 test {
@@ -142,8 +143,8 @@ def fixAscNames = { name ->
 
 compileJava {
   options.compilerArgs << "-parameters"
-  sourceCompatibility = 1.16
-  targetCompatibility = 1.16
+  sourceCompatibility = '17'
+  targetCompatibility = '17'
 }
 
 def getVersionCode() {
