--- a/.github/workflows/release-component.yml
+++ b/.github/workflows/release-component.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
       shouldRelease: 
-        required: true
+        required: false
         type: string
       componentPath:
         required: true
