--- a/.github/workflows/release-component.yml
+++ b/.github/workflows/release-component.yml
@@ -46,5 +46,5 @@ jobs:
           OUTPUT_PATH: '.\secring.gpg'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Publish
-        run: ./gradlew $PREVIEW_TASK
+      #- name: Publish
+      #  run: ./gradlew $PREVIEW_TASK
