--- a/.github/workflows/release-component.yml
+++ b/.github/workflows/release-component.yml
@@ -36,7 +36,7 @@ jobs:
         run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
         shell: pwsh
         env:  
-          ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
+          ENCODED_VALUE: ${{ secrets.RAMSES }}
           OUTPUT_PATH: '.\local.properties' 
       - name: Download file
         run: |
@@ -44,7 +44,7 @@ jobs:
           .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
         shell: pwsh
         env: 
-          ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
+          ENCODED_VALUE: ${{ secrets.RAMSES }}
           OUTPUT_PATH: '.\secring.gpg'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
