--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -32,6 +32,9 @@ jobs:
           serialization-text:
             - 'components/serialization/text/**' 
   
+  testBuildAbstractions:
+    uses: ./.github/workflows/testComponentRelease.yml
+
   buildAbstractions:
     needs: checkPaths
     if: ${{ needs.checkPaths.outputs.abstractions_count }} > 0
