--- a/.github/workflows/testComponentRelease.yml
+++ b/.github/workflows/testComponentRelease.yml
@@ -35,4 +35,6 @@ jobs:
           ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
           OUTPUT_PATH: '.\components\abstractions\secring.gpg'
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: |
+          cd components\abstractions 
+          chmod +x gradlew
