--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -17,6 +17,7 @@ jobs:
   checkPaths:
     runs-on: ubuntu-latest
     steps: 
+    - uses: actions/checkout@v3
     - uses: dorny/paths-filter@v2
       id: filter
       with:
