--- a/.github/workflows/release-component.yml
+++ b/.github/workflows/release-component.yml
@@ -9,9 +9,10 @@ on:
       shouldRelease: 
         required: false
         type: string
-      componentPath:
+      componentPathPwsh:
         required: true
         type: string
+      componentPathUbuntu:
 
 jobs: 
   mavenSnapshot:
@@ -19,9 +20,6 @@ jobs:
     environment: 
       name: maven_central_snapshot  
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.componentPath }}
     steps: 
       - uses: actions/checkout@v3
       - name: Easy detect-secrets
@@ -32,21 +30,23 @@ jobs:
           java-version: 17
           distribution: 'adopt'
           cache: gradle
-      - name: show directory
-        run: ls
       - name: Download file
-        run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
+        run: ${{ inputs.componentPathPwsh }}scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
         shell: pwsh
         env:  
           ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
           OUTPUT_PATH: '.\local.properties' 
       - name: Download file
-        run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
+        run: ${{ inputs.componentPathPwsh }}scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
         shell: pwsh
         env: 
           ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
           OUTPUT_PATH: '.\secring.gpg'
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: |
+            cd ${{ componentPathUbuntu }}
+            chmod +x gradlew
       #- name: Publish
-      #  run: ./gradlew $PREVIEW_TASK
+      #  run: |
+      #      cd ${{ componentPathUbuntu }}
+      #      gradlew $PREVIEW_TASK
