--- a/.github/workflows/release-component.yml
+++ b/.github/workflows/release-component.yml
@@ -46,7 +46,7 @@ jobs:
           OUTPUT_PATH: '.\secring.gpg'
       - name: Grant execute permission for gradlew
         run: |
-            cd ${{ componentPathUbuntu }}
+            cd ${{ inputs.componentPathUbuntu }}
             chmod +x gradlew
       #- name: Publish
       #  run: |
