--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -33,13 +33,13 @@ jobs:
             - 'components/serialization/text/**' 
     - uses: actions/checkout@v3
     - name: Download file
-      run: components\abstractions\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
+      run: .\components\abstractions\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
       shell: pwsh
       env:  
         ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
         OUTPUT_PATH: '.\local.properties' 
     - name: Download file
-      run: components\abstractions\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
+      run: .\components\abstractions\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
       shell: pwsh
       env: 
         ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
