--- a/.github/workflows/release-component.yml
+++ b/.github/workflows/release-component.yml
@@ -20,6 +20,9 @@ on:
         required: true
       SECRING_GPG:
         required: true
+        
+env: 
+  PREVIEW_TASK: publishSnapshotPublicationToSonatypeSnapshotRepository
 
 jobs: 
   mavenSnapshot:
@@ -54,5 +57,5 @@ jobs:
           OUTPUT_PATH: '.\secring.gpg'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      #- name: Publish
-      #  run: ./gradlew $PREVIEW_TASK
+      - name: Publish
+        run: ./gradlew $PREVIEW_TASK
