--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -9,7 +9,30 @@ on:
       - 'LICENSE'
       - 'THIRD PARTY NOTICES'
       - '**.md'
-
+  workflow_dispatch:
+    inputs:
+      abstractions:
+        description: release abstractions
+        default: false
+        type: boolean
+      auth-azure:
+        description: release azure-auth
+        default: false
+        type: boolean
+      http-okHttp:
+        description: release http-okHttp
+        default: false
+        type: boolean
+      serialization-json: 
+        description: release serialization-json
+        default: false
+        type: boolean 
+      serialization-text: 
+        description: release serialization-text
+        default: false
+        type: boolean
+        
+  
 env: 
   PREVIEW_TASK: publishSnapshotPublicationToSonatypeSnapshotRepository
 
@@ -34,7 +57,7 @@ jobs:
 
   buildAbstractions:
     needs: checkPaths
-    if: ${{ needs.checkPaths.outputs.abstractions_count }} > 0
+    if: ( ${{ needs.checkPaths.outputs.abstractions_count }} > 0 ) || ( github.event.inputs.abstractions == 'true' ) 
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: abstractions
@@ -42,7 +65,7 @@ jobs:
 
   buildAuthenticationAzure:
     needs: checkPaths
-    if: ${{ needs.checkPaths.outputs.authentication-azure_count }} > 0
+    if: ( ${{ needs.checkPaths.outputs.authentication-azure_count }} > 0 ) || ( github.event.inputs.auth-azure == 'true' )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: authentication-azure
@@ -50,7 +73,7 @@ jobs:
 
   buildOkHttp:
     needs: checkPaths
-    if: ${{ needs.checkPaths.outputs.http-okHttp_count }} > 0
+    if: ( ${{ needs.checkPaths.outputs.http-okHttp_count }} > 0 ) || ( github.event.inputs.http-okHttp == 'true' )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: http-okHttp 
@@ -58,7 +81,7 @@ jobs:
 
   buildSerializationJson:
     needs: checkPaths
-    if: ${{ needs.checkPaths.outputs.serialization-json_count }} > 0
+    if: ( ${{ needs.checkPaths.outputs.serialization-json_count }} > 0 ) || ( github.event.inputs.serialization-json == 'true' )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: serialization-json
@@ -66,7 +89,7 @@ jobs:
 
   buildSerializationText:
     needs: checkPaths
-    if: ${{ needs.checkPaths.outputs.serialization-text_count }} > 0 
+    if: ( ${{ needs.checkPaths.outputs.serialization-text_count }} > 0 ) || ( github.event.inputs.serialization-text == 'true' )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: serialization-text
