--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -38,6 +38,7 @@ env:
 
 jobs:
   checkPaths:
+    if: ( github.event_name != 'workflow_dispatch'	)
     runs-on: ubuntu-latest
     steps: 
     - uses: dorny/paths-filter@v2
