--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -44,6 +44,7 @@ jobs:
     - uses: dorny/paths-filter@v2
       id: filter
       with:
+        base: develop
         filters: |
           abstractions:
             - 'components/abstractions/**'
