--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -59,7 +59,7 @@ jobs:
 
   buildAbstractions:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.abstractions_count }} > 0 ) || ( github.event.inputs.abstractions == 'true' ) 
+    if: ${{ always() }} && (( ${{ needs.checkPaths.outputs.abstractions_count }} > 0 ) || ( github.event.inputs.abstractions == 'true' )) 
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: abstractions
@@ -67,7 +67,7 @@ jobs:
 
   buildAuthenticationAzure:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.authentication-azure_count }} > 0 ) || ( github.event.inputs.auth-azure == 'true' )
+    if: ${{ always() }} && (( ${{ needs.checkPaths.outputs.authentication-azure_count }} > 0 ) || ( github.event.inputs.auth-azure == 'true' ))
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: authentication-azure
@@ -75,7 +75,7 @@ jobs:
 
   buildOkHttp:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.http-okHttp_count }} > 0 ) || ( github.event.inputs.http-okHttp == 'true' )
+    if: ${{ always() }} && (( ${{ needs.checkPaths.outputs.http-okHttp_count }} > 0 ) || ( github.event.inputs.http-okHttp == 'true' ))
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: http-okHttp 
@@ -83,7 +83,7 @@ jobs:
 
   buildSerializationJson:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.serialization-json_count }} > 0 ) || ( github.event.inputs.serialization-json == 'true' )
+    if: ${{ always() }} && (( ${{ needs.checkPaths.outputs.serialization-json_count }} > 0 ) || ( github.event.inputs.serialization-json == 'true' ))
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: serialization-json
@@ -91,7 +91,7 @@ jobs:
 
   buildSerializationText:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.serialization-text_count }} > 0 ) || ( github.event.inputs.serialization-text == 'true' )
+    if: ${{ always() }} && (( ${{ needs.checkPaths.outputs.serialization-text_count }} > 0 ) || ( github.event.inputs.serialization-text == 'true' ))
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: serialization-text
