--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkPaths
-      if: ( github.event_name != 'workflow_dispatch'	)
+      if: ${{ github.event_name != 'workflow_dispatch' }}
       uses: dorny/paths-filter@v2
       id: filter
       with:
