--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -61,7 +61,7 @@ jobs:
 
   buildAbstractions:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.abstractions_count }} > 0 ) || ( github.event.inputs.abstractions == 'true' ) 
+    if: ( ${{ needs.checkPaths.outputs.abstractions_count }} > 0 ) || ( ${{ github.event.inputs.abstractions == 'true' }} ) 
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: abstractions
@@ -69,7 +69,7 @@ jobs:
 
   buildAuthenticationAzure:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.authentication-azure_count }} > 0 ) || ( github.event.inputs.auth-azure == 'true' )
+    if: ( ${{ needs.checkPaths.outputs.authentication-azure_count }} > 0 ) || ( ${{ github.event.inputs.auth-azure == 'true'}} )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: authentication-azure
@@ -77,7 +77,7 @@ jobs:
 
   buildOkHttp:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.http-okHttp_count }} > 0 ) || ( github.event.inputs.http-okHttp == 'true' )
+    if: ( ${{ needs.checkPaths.outputs.http-okHttp_count }} > 0 ) || ( ${{ github.event.inputs.http-okHttp == 'true' }} )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: http-okHttp 
@@ -85,7 +85,7 @@ jobs:
 
   buildSerializationJson:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.serialization-json_count }} > 0 ) || ( github.event.inputs.serialization-json == 'true' )
+    if: ( ${{ needs.checkPaths.outputs.serialization-json_count }} > 0 ) || ( ${{ github.event.inputs.serialization-json == 'true'}} )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: serialization-json
@@ -93,7 +93,7 @@ jobs:
 
   buildSerializationText:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.serialization-text_count }} > 0 ) || ( github.event.inputs.serialization-text == 'true' )
+    if: ( ${{ needs.checkPaths.outputs.serialization-text_count }} > 0 ) || ( ${{ github.event.inputs.serialization-text == 'true'}} )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: serialization-text
