--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -38,11 +38,11 @@ env:
 
 jobs:
   checkPaths:
-    # if: ( github.event_name != 'workflow_dispatch'	)
+    if: ( github.event_name != 'workflow_dispatch'	)
     runs-on: ubuntu-latest
     steps:
     - name: checkPaths
-      if: ${{ github.event_name != 'workflow_dispatch' }}
+      #if: ${{ github.event_name != 'workflow_dispatch' }}
       uses: dorny/paths-filter@v2
       id: filter
       with:
@@ -61,7 +61,7 @@ jobs:
 
   buildAbstractions:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.abstractions_count }} > 0 ) || ( ${{ github.event.inputs.abstractions == 'true' }} ) 
+    if: ( ${{ github.event.inputs.abstractions == 'true' }} ) #|| ( ${{ needs.checkPaths.outputs.abstractions_count }} > 0 )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: abstractions
@@ -69,7 +69,7 @@ jobs:
 
   buildAuthenticationAzure:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.authentication-azure_count }} > 0 ) || ( ${{ github.event.inputs.auth-azure == 'true'}} )
+    if: ( ${{ github.event.inputs.auth-azure == 'true'}} ) #|| ( ${{ needs.checkPaths.outputs.authentication-azure_count }} > 0 )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: authentication-azure
@@ -77,7 +77,7 @@ jobs:
 
   buildOkHttp:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.http-okHttp_count }} > 0 ) || ( ${{ github.event.inputs.http-okHttp == 'true' }} )
+    if: ( ${{ github.event.inputs.http-okHttp == 'true' }} ) #|| ( ${{ needs.checkPaths.outputs.http-okHttp_count }} > 0 ) 
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: http-okHttp 
@@ -85,7 +85,7 @@ jobs:
 
   buildSerializationJson:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.serialization-json_count }} > 0 ) || ( ${{ github.event.inputs.serialization-json == 'true'}} )
+    if: ( ${{ github.event.inputs.serialization-json == 'true'}} ) #|| ( ${{ needs.checkPaths.outputs.serialization-json_count }} > 0 )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: serialization-json
@@ -93,7 +93,7 @@ jobs:
 
   buildSerializationText:
     needs: checkPaths
-    if: ( ${{ needs.checkPaths.outputs.serialization-text_count }} > 0 ) || ( ${{ github.event.inputs.serialization-text == 'true'}} )
+    if: ( ${{ github.event.inputs.serialization-text == 'true'}} ) #|| ( ${{ needs.checkPaths.outputs.serialization-text_count }} > 0 )
     uses: ./.github/workflows/gradleBuild-component.yml
     with:
       componentName: serialization-text
